--- a/06.17.epilogue.Rmd
+++ b/06.17.epilogue.Rmd
@@ -1,8 +1,10 @@
 # Epilogue
 
->*"Begin at the beginning", the King said, very gravely, \\"and go on till you come to the end: then stop"* 
--- Lewis Carroll
+|       *"Begin at the beginning", the King said, very gravely,*
+|       *and go on till you come to the end: then stop"*
+|                               -- Lewis Carroll
 
+\
 It feels somewhat strange to be writing this chapter, and more than a little inappropriate. An epilogue is what you write when a book is finished, and this book really isn't finished. There are a ***lot*** of things still missing from this book. It doesn't have an index yet. A lot of references are missing. There are no "do it yourself" exercises. And in general, I feel that there a lot of things that are wrong with the presentation, organisation and content of this book. Given all that, I don't want to try to write a "proper" epilogue. I haven't finished writing the substantive content yet, so it doesn't make sense to try to bring it all together. But this version of the book is going to go online for students to use, and you will may be to purchase a hard copy too, so I want to give it at least a veneer of closure. So let's give it a go, shall we?
 
 
